--- a/src/style.css
+++ b/src/style.css
@@ -9,19 +9,28 @@
   --MARGIN: 2rem;
   --FONT-TITLE-QUESTION-RESULT: 'Karla', sans-serif;
   --FONT-FAMILY-START-ANSWER-BUTTON: 'Inter', sans-serif;
+  --BACKGROUND-COLOR: linear-gradient(#ebf4de, #91bfe5);
 }
 
 /* GENERAL STYLES */
-.blob-right {
-  position: absolute;
-  top: 0;
-  right: 0;
+body {
+  overflow: overlay;
 }
 
-.blob-left {
-  position: absolute;
-  bottom: 0;
-  left: 0;
+::-webkit-scrollbar {
+  background-color: transparent;
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 20px;
+  border: 3px solid transparent;
+  background-color: rgba(0, 0, 0, 0.3);
+  background-clip: content-box;
 }
 
 .hr-new {
@@ -36,6 +45,7 @@
   align-items: center;
   width: 100%;
   height: 100vh;
+  background: var(--BACKGROUND-COLOR);
 }
 
 .start-page--container {
@@ -76,6 +86,7 @@
   align-items: center;
   width: 100%;
   height: 100vh;
+  background: var(--BACKGROUND-COLOR);
 }
 
 .settings-page--container {
@@ -98,6 +109,78 @@
   margin-bottom: 1rem;
 }
 
+/* Dropdown styles */
+.dropdown-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.dropdown-container {
+  text-align: left;
+  border: 1px solid #ccc;
+  position: relative;
+  border-radius: 5px;
+  margin-bottom: var(--MARGIN);
+  max-width: 60%;
+  min-width: 30%;
+  background-color: #fff;
+}
+
+.dropdown-input {
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  user-select: none;
+  cursor: pointer;
+  font-family: var(--FONT-FAMILY-START-ANSWER-BUTTON);
+  font-size: small;
+}
+
+.dropdown-menu {
+  position: absolute;
+  transform: translateY(4px);
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  overflow: auto;
+  max-height: 150px;
+  background-color: #fff;
+  z-index: 1;
+}
+
+.dropdown-item {
+  padding: 5px;
+  cursor: pointer;
+  color: black;
+  font-family: var(--FONT-FAMILY-START-ANSWER-BUTTON);
+  font-size: smaller;
+}
+
+.dropdown-item:hover {
+  background-color: #9fc3f870;
+}
+
+.dropdown-item.selected {
+  background-color: #307ceffd;
+  color: #fff;
+}
+
+/* COUNTDOWN STYLES */
+.countdown-overlay {
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: var(--BACKGROUND-COLOR);
+  width: 100%;
+  height: 100vh;
+}
+
 /* QUIZ-PAGE */
 .quiz-page {
   display: flex;
@@ -106,18 +189,26 @@
   align-items: center;
   position: relative;
   width: 100%;
+  min-height: 100vh;
+  background: var(--BACKGROUND-COLOR);
 }
 
 .quiz-page--container {
   margin-right: var(--MARGIN);
   margin-left: var(--MARGIN);
   margin-top: var(--MARGIN);
-  width: 80%;
+  width: 85%;
 }
 
 /* QUESTION */
+.question--container {
+  padding: 1rem;
+  background-color: #ffffffa9;
+  border-radius: 10px;
+}
+
 .question {
-  margin-top: var(--MARGIN);
+ /*  margin-top: var(--MARGIN); */
   width: 80%;
   color: var(--TEXT-COLOR);
   font-family: var(--FONT-TITLE-QUESTION-RESULT);
@@ -125,7 +216,7 @@
 }
 
 .question--answers {
-  width: 80%;
+  width: 75%;
   display: flex;
   flex-direction: row;
   font-family: var(--FONT-FAMILY-START-ANSWER-BUTTON);
@@ -199,65 +290,6 @@
   color: var(--TEXT-COLOR);
   font-family: var(--FONT-TITLE-QUESTION-RESULT);
   font-weight: bold;
-}
-
-/* DROPDOWN-STYLES */
-.dropdown-box {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-}
-
-.dropdown-container {
-  text-align: left;
-  border: 1px solid #ccc;
-  position: relative;
-  border-radius: 5px;
-  margin-bottom: var(--MARGIN);
-  max-width: 60%;
-  min-width: 30%;
-}
-
-.dropdown-input {
-  padding: 5px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  user-select: none;
-  cursor: pointer;
-  font-family: var(--FONT-FAMILY-START-ANSWER-BUTTON);
-  font-size: small;
-}
-
-.dropdown-menu {
-  position: absolute;
-  transform: translateY(4px);
-  width: 100%;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  overflow: auto;
-  max-height: 150px;
-  background-color: #fff;
-  z-index: 1;
-}
-
-.dropdown-item {
-  padding: 5px;
-  cursor: pointer;
-  color: black;
-  font-family: var(--FONT-FAMILY-START-ANSWER-BUTTON);
-  font-size: smaller;
-}
-
-.dropdown-item:hover {
-  background-color: #9fc3f870;
-}
-
-.dropdown-item.selected {
-  background-color: #307ceffd;
-  color: #fff;
 }
 
 /* MEDIA QUERY TO ADJUST THE WIDTH WHEN SCREEN GET'S BIG */
